# Pixel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: shader.vert
include/: pch.hpp
include/Engine/: Application.hpp  OrthographicCamera.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/Pixel/: Application.hpp  OrthographicCamera.hpp  Pixel.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/Util/: Logger.hpp  Misc.hpp  UUID.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp
src/Engine/: Application.cpp  OrthographicCamera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Pixel/: Application.cpp  OrthographicCamera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Util/: Logger.cpp  Misc.cpp  UUID.cpp
